Bug #27441 There is no COLS bitmap for the after image of an update rows event
Submitted: 26 Mar 2007 12:41 Modified: 11 Apr 2007 2:07
Reporter: Mats Kindahl Email Updates:
Status: Closed
Category:Server: RBR Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Mats Kindahl Target Version:

[26 Mar 2007 12:41] Mats Kindahl
Description:
The COLS bitmap for the Update_rows_log_event is common for both the before and after
image. This means that it is not possible to have different sets of columns available for
the before and the after image.

How to repeat:
Read code.

Suggested fix:
Add a COLS bitmap for the after image of the Update_rows_log_event.
[26 Mar 2007 18:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22953

ChangeSet@1.2481, 2007-03-26 20:26:27+02:00, mats@romeo.(none) +3 -0
  BUG#27441 (There is no COLS bitmap for the after image of an update
  rows event):
  
  Adding a after image COLS bitmap to Update_rows_log_event (for telling
  what columns that are present in the after image of each row update).
  
  Also fixing case where Rows_log_event length was not correctly computed
  (happened when the number of columns in a table was more than 251).
[27 Mar 2007 8:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22984

ChangeSet@1.2481, 2007-03-27 10:37:57+02:00, mats@romeo.(none) +3 -0
  BUG#27441 (There is no COLS bitmap for the after image of an update
  rows event):
  
  Adding a after image COLS bitmap to Update_rows_log_event (for telling
  what columns that are present in the after image of each row update).
  
  Also fixing case where Rows_log_event length was not correctly computed
  (happened when the number of columns in a table was more than 251).
[27 Mar 2007 9:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22987

ChangeSet@1.2481, 2007-03-27 11:27:22+02:00, mats@romeo.(none) +3 -0
  BUG#27441 (There is no COLS bitmap for the after image of an update
  rows event):
  
  Adding a after image COLS bitmap to Update_rows_log_event (for telling
  what columns that are present in the after image of each row update).
  
  Also fixing case where Rows_log_event length was not correctly computed
  (happened when the number of columns in a table was more than 251).
[27 Mar 2007 10:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22993

ChangeSet@1.2481, 2007-03-27 12:17:51+02:00, mats@romeo.(none) +3 -0
  BUG#27441 (There is no COLS bitmap for the after image of an update
  rows event):
  
  Adding a after image COLS bitmap to Update_rows_log_event (for telling
  what columns that are present in the after image of each row update).
  
  Also fixing case where Rows_log_event length was not correctly computed
  (happened when the number of columns in a table was more than 251).
[31 Mar 2007 23:55] Bugs System
Pushed into 5.1.18-beta
[11 Apr 2007 2:07] Paul DuBois
No changelog entry needed. (The incompatibility in binary
log format will be mentioned for the accompanying bug
report for Bug#22583.)